--- a/styles/style_lecastellcanet.css
+++ b/styles/style_lecastellcanet.css
@@ -190,6 +190,7 @@ body .header .logo a img {
 .header .text-header .links .socials a {
     width: 1.5rem;
     height: 1.5rem;
+    background-color: transparent;
 }
 
 .header .text-header .links .socials a img {
