--- a/styles/style_projects.css
+++ b/styles/style_projects.css
@@ -177,16 +177,6 @@ body .header .logo a img {
     background-color: transparent;
 }
 
-.header .text-header .links h2 {
-    color: var(--primary-foreground);
-    text-align: left;
-    letter-spacing: 0.5rem;
-
-    -webkit-background-clip: text;
-    background-clip: text;
-    background-color: transparent;
-}
-
 .header .text-header .links .socials {
     z-index: 2;
     display: flex;
@@ -209,6 +199,7 @@ body .header .logo a img {
     background-color: transparent;
 }
 
+
 .header .text-header img {
     z-index: 1;
     border-radius: 0.5rem;
@@ -217,57 +208,148 @@ body .header .logo a img {
 }
 
 /* -------------------------------------------------- */
-/* ---------------------- Main ---------------------- */
+/* --------------------- Cards ---------------------- */
 /* -------------------------------------------------- */
 
-main {
-    padding-bottom: 1rem;
-    margin: 0rem 10rem 0rem 10rem;
-}
-
-main .border {
-    padding: 1rem 0rem 0rem 0rem;
-    margin-top: 2rem;
+main .projects .border {
+    padding: 1rem 40rem 0rem 40rem;
+    margin-bottom: 1rem;
     border-top: solid 0.2rem var(--border);
 }
 
-main img {
-    height: 3rem;
+main .projects {
+    margin: 3rem;
+    text-align: center; /* Center the h2 */
+
+    display: flex; /* Enable Flexbox for centering */
+    justify-content: center; /* Center horizontally */
+    align-items: center; /* Center vertically */
+    flex-direction: column;
+
 }
 
-main h2 {
-    margin-left: -5rem;
-    margin-right: -5rem;
-    text-decoration: underline;
+main .projects h2 {
+    text-align: center;
+    text-decoration: underline 0.2rem;
+    font-size: 2rem;
+    margin-bottom: 2.5rem;
 }
 
-main h3 {
-    margin-left: -4rem;
-    margin-right: -4rem;
+main .projects .cards-container {
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+    grid-gap: 5rem;
+    justify-content: center;
+    align-items: center;
+    width: 100rem;
 }
 
-main h4 {
-    margin-left: -3rem;
-    margin-right: -3rem;
+main .projects .cards-container .card {
+    margin: 0.5rem 0;
+    border: solid 0.2rem var(--border);
+    background-color: var(--card);
+    width: 30rem;
+    border-radius: 0.5rem;
 }
 
-main p {
-    margin-left: -2rem;
-    margin-right: -2rem;
+main .projects .cards-container .card:hover {
+    
+    background-color: var(--card);
+    border: solid 0.2rem var(--ring);
+}
+
+main .projects .cards-container .card h3 {
+    color: var(--primary-foreground);
+    padding: 1rem;
+    font-size: 1.5rem;
+    background-color: var(--card);
+    border-bottom: solid 0.2rem var(--border);
+    border-radius: 0.5rem 0.5rem 0 0;
+}
+
+main .projects .cards-container .card:hover h3 {
+    color: var(--primary);
+    background-color: var(--card-foreground);
+    border-bottom: solid 0.2rem var(--ring);
+}
+
+main .projects .cards-container .card img {
+    border-bottom: solid 0.2rem var(--border);
+    max-width: 29.7rem;
+    height: 15rem;
+    opacity: 0.8;
+}
+
+main .projects .cards-container .card:hover img {
+    border-bottom: solid 0.2rem var(--ring);
+    opacity: 1;
+}
+
+main .projects .cards-container .card p {
+    color: var(--primary-foreground);
+    padding: 0rem 1rem 0rem 1rem;
+    background-color: var(--card);
     text-align: justify;
 }
 
-main p i {
-    margin-left: -2rem;
-    text-align: start;
+main .projects .cards-container .card:hover p {
+    color: var(--primary);
+    background-color: var(--card-foreground);
 }
 
-main .cv {
-    margin-left: -2rem;
-    margin-right: -2rem;
-    text-align: justify;
-    display: flex;          /* Enable flexbox layout */
-    align-items: center;     /* Vertically center the content */
+main .projects .cards-container .card p b {
+    color: var(--primary-foreground);
+    background-color: var(--card);
+}
+
+main .projects .cards-container .card:hover p b {
+    color: var(--primary);
+    background-color: var(--card-foreground);
+}
+
+main .projects .cards-container .card a {
+    display: block;
+    color: var(--primary-foreground);
+    background-color: var(--card);
+    border-bottom: solid 0.1rem var(--border);
+    text-align: right;
+    padding-bottom: 0.1rem;
+}
+
+main .projects .cards-container .card:hover a {
+    color: var(--primary);
+    background-color: var(--card-foreground);
+    border-bottom: solid 0.1rem var(--ring);
+}
+
+main .projects .cards-container .card .technologies {
+    display: flex; /* Enable Flexbox */
+    justify-content: flex-start; /* Align the spans horizontally at the start */
+    align-items: center;
+    color: var(--primary-foreground);
+    background-color: var(--card);
+    border-bottom: 0;
+    border-radius: 0 0 0.5rem 0.5rem;
+    height: 2rem;
+}
+
+main .projects .cards-container .card:hover .technologies {
+    color: var(--primary);
+    background-color: var(--card-foreground);
+}
+
+main .projects .cards-container .card .technologies span {
+    color: var(--primary);
+    background-color: var(--card);
+    margin: 1rem 0.5rem 1rem 0.2rem;
+    padding: 0.1rem;
+    border-radius: 10rem;
+    border: solid 0.2rem var(--background);
+}
+
+main .projects .cards-container .card:hover .technologies span {
+    color: var(--primary-foreground);
+    background-color: var(--foreground);
 }
 
 /* -------------------------------------------------- */
