--- a/styles/style_about-me.css
+++ b/styles/style_about-me.css
@@ -4,29 +4,13 @@
     --background: #18111B;      /* 1 */
     --foreground: #1E1523;      /* 2 */
 
-    --muted: ;
-    --muted-foreground: ;
-
-    --accent: ;
-    --accent-foreground: ;
-
-    --popover: ;
-    --popover-foreground: ;
-
     --border: #54346B;          /* 6 */
-    --input: ;
 
     --card: #301C3B;            /* 3 */
     --card-foreground: #3D224E; /* 4 */
 
     --primary: #ECD9FA;
     --primary-foreground: #D19DFF;
-
-    --secondary: ;
-    --secondary-foreground: ;
-
-    --destructive: ;
-    --destructive-foreground: ;
 
     --ring: #664282;            /* 7 */
 
@@ -257,12 +241,7 @@ main p {
     text-align: justify;
 }
 
-main p i {
-    margin-left: -2rem;
-    text-align: start;
-}
-
-main .cv {
+main .curriculum-vitae {
     margin-left: -2rem;
     margin-right: -2rem;
     text-align: justify;
@@ -303,7 +282,70 @@ footer .contacts {
 }
 
 @media (max-width: 768px) {
-    .skills .categories-container {
-        grid-template-columns: 1fr;
+    
+    .navbar {
+        white-space: nowrap;
+    }
+
+    .navbar a {
+        padding: 0.5rem 0.5rem;
+    }
+
+    .header .text-header {
+        min-height: 50rem;
+        max-height: 50rem;
+        align-items: start;
+    }
+    
+    .header .text-header .links {
+        margin: 0rem 0rem 0rem 1rem;
+    }
+    
+    .header .text-header .photo {
+        position: absolute;
+        width: 20rem;
+        margin: 28rem 0rem 0rem 3rem;
+    }
+
+    main {
+        padding-bottom: 1rem;
+        margin: 0rem 3rem 0rem 3rem;
+    }
+    
+    main .border {
+        padding: 1rem 0rem 0rem 0rem;
+        margin-top: 2rem;
+        border-top: solid 0.2rem var(--border);
+    }
+    
+    main img {
+        height: 3rem;
+    }
+    
+    main h2 {
+        margin-left: -2rem;
+        margin-right: -2rem;
+        text-decoration: underline;
+    }
+    
+    main h3 {
+        margin-left: -1rem;
+        margin-right: -1rem;
+    }
+    
+    main h4 {
+        margin-left: 0rem;
+        margin-right: 0rem;
+    }
+    
+    main p {
+        margin-left: 1rem;
+        margin-right: 1rem;
+        text-align: justify;
+    }
+
+    main .about-me-p {
+        margin-left: -2rem;
+        margin-right: -2rem;
     }
 }
