--- a/styles/style_index.css
+++ b/styles/style_index.css
@@ -34,7 +34,7 @@ h1, h2, h3, h4, h5, h6 {
     font-family: Catamaran;
 }
 
-p, .skill, a {
+p, .skill, a, span {
     font-family: 'M PLUS 2';
 }
 
@@ -175,6 +175,12 @@ body .header .logo a img {
     width: 1.5rem;
     height: 1.5rem;
     background-color: transparent;
+    transition: ease-in-out 0.2s;
+}
+
+.header .text-header .links .socials a:hover {
+    margin-top: -3px;
+    transition: ease-in-out 0.2s;
 }
 
 .header .text-header .links .socials a img {
@@ -230,12 +236,6 @@ main .skills .categories-container .category {
     border-radius: 0.5rem;
 }
 
-main .skills .categories-container .category:hover {
-    
-    background-color: var(--card);
-    border: solid 0.2rem var(--ring);
-}
-
 main .skills .categories-container .category h3 {
     color: var(--primary-foreground);
     padding: 1rem;
@@ -245,12 +245,6 @@ main .skills .categories-container .category h3 {
     border-radius: 0.5rem 0.5rem 0 0;
 }
 
-main .skills .categories-container .category:hover h3 {
-    color: var(--primary);
-    background-color: var(--card-foreground);
-    border-bottom: solid 0.2rem var(--ring);
-}
-
 main .skills .categories-container .category .skill {
     color: var(--primary-foreground);
     padding: 1rem;
@@ -258,18 +252,7 @@ main .skills .categories-container .category .skill {
     border-bottom: solid 0.1rem var(--border);
 }
 
-main .skills .categories-container .category:hover .skill {
-    color: var(--primary);
-    background-color: var(--card-foreground);
-    border-bottom: solid 0.1rem var(--ring);
-}
-
 main .skills .categories-container .category .skill:last-child {
-    border-bottom: 0;
-    border-radius: 0 0 0.5rem 0.5rem;
-}
-
-main .skills .categories-container .category:hover .skill:last-child {
     border-bottom: 0;
     border-radius: 0 0 0.5rem 0.5rem;
 }
@@ -287,7 +270,6 @@ main .projects .border {
 main .projects {
     margin: 3rem;
     text-align: center; /* Center the h2 */
-
     display: flex; /* Enable Flexbox for centering */
     justify-content: center; /* Center horizontally */
     align-items: center; /* Center vertically */
@@ -307,7 +289,7 @@ main .projects .cards-container {
     grid-template-columns: repeat(3, 1fr);
     grid-gap: 5rem;
     justify-content: center;
-    align-items: center;
+    align-items: start;
     width: 100rem;
 }
 
@@ -317,13 +299,26 @@ main .projects .cards-container .card {
     background-color: var(--card);
     width: 30rem;
     border-radius: 0.5rem;
+    transition: ease-in-out 0.2s;
 }
 
 main .projects .cards-container .card:hover {
-    
     background-color: var(--card);
     border: solid 0.2rem var(--ring);
+    transition: ease-in-out 0.2s;
 }
+
+main .projects .cards-container .card a {
+    text-decoration: none;
+    background-color: var(--card);
+    transition: ease-in-out 0.2s;
+}
+
+main .projects .cards-container .card:hover a {
+    background-color: var(--card-foreground);
+    transition: ease-in-out 0.2s;
+}
+
 
 main .projects .cards-container .card h3 {
     color: var(--primary-foreground);
@@ -332,90 +327,111 @@ main .projects .cards-container .card h3 {
     background-color: var(--card);
     border-bottom: solid 0.2rem var(--border);
     border-radius: 0.5rem 0.5rem 0 0;
+    transition: ease-in-out 0.2s;
 }
 
 main .projects .cards-container .card:hover h3 {
     color: var(--primary);
     background-color: var(--card-foreground);
     border-bottom: solid 0.2rem var(--ring);
+    transition: ease-in-out 0.2s;
 }
 
 main .projects .cards-container .card img {
-    border-bottom: solid 0.2rem var(--border);
-    width: 29.7rem;
+    max-width: 29.7rem;
+    height: 14.6rem;
     opacity: 0.8;
+    margin-bottom: -0.3rem;
+    transition: ease-in-out 0.2s;
 }
 
 main .projects .cards-container .card:hover img {
-    border-bottom: solid 0.2rem var(--ring);
     opacity: 1;
+    transition: ease-in-out 0.2s;
 }
 
 main .projects .cards-container .card p {
+    border-top: solid 0.2rem var(--border);
     color: var(--primary-foreground);
     padding: 0rem 1rem 0rem 1rem;
     background-color: var(--card);
     text-align: justify;
+    transition: ease-in-out 0.2s;
 }
 
 main .projects .cards-container .card:hover p {
+    border-top: solid 0.2rem var(--ring);
     color: var(--primary);
     background-color: var(--card-foreground);
+    transition: ease-in-out 0.2s;
+}
+
+main .projects .cards-container .card p:last-of-type {
+    border-top: 0rem;
 }
 
 main .projects .cards-container .card p b {
     color: var(--primary-foreground);
     background-color: var(--card);
+    transition: ease-in-out 0.2s;
 }
 
 main .projects .cards-container .card:hover p b {
     color: var(--primary);
     background-color: var(--card-foreground);
+    transition: ease-in-out 0.2s;
 }
 
-main .projects .cards-container .card a {
+main .projects .cards-container .card .see-more {
     display: block;
+    text-decoration: underline;
     color: var(--primary-foreground);
     background-color: var(--card);
     border-bottom: solid 0.1rem var(--border);
     text-align: right;
     padding-bottom: 0.1rem;
+    transition: ease-in-out 0.2s;
 }
 
-main .projects .cards-container .card:hover a {
+main .projects .cards-container .card:hover .see-more {
     color: var(--primary);
     background-color: var(--card-foreground);
     border-bottom: solid 0.1rem var(--ring);
+    transition: ease-in-out 0.2s;
 }
 
 main .projects .cards-container .card .technologies {
-    display: flex; /* Enable Flexbox */
-    justify-content: flex-start; /* Align the spans horizontally at the start */
+    display: flex;
+    justify-content: flex-start;
     align-items: center;
     color: var(--primary-foreground);
     background-color: var(--card);
     border-bottom: 0;
     border-radius: 0 0 0.5rem 0.5rem;
     height: 2rem;
+    transition: ease-in-out 0.2s;
 }
 
 main .projects .cards-container .card:hover .technologies {
     color: var(--primary);
     background-color: var(--card-foreground);
+    transition: ease-in-out 0.2s;
 }
 
 main .projects .cards-container .card .technologies span {
     color: var(--primary);
     background-color: var(--card);
-    margin: 1rem 0.5rem 1rem 0.2rem;
-    padding: 0.1rem;
+    margin: 0.5rem 0.5rem 0.5rem 0.2rem;
+    padding: 0rem 0.2rem 0.1rem 0.2rem;
     border-radius: 10rem;
     border: solid 0.2rem var(--background);
+    transition: ease-in-out 0.2s;
 }
 
 main .projects .cards-container .card:hover .technologies span {
     color: var(--primary-foreground);
     background-color: var(--foreground);
+    transition: ease-in-out 0.2s;
 }
 
 /* -------------------------------------------------- */
@@ -500,7 +516,7 @@ footer .contacts {
         width: 20rem;
     }
 
-    main .projects .cards-container .card img {
+    main .projects .cards-container .card a img {
         width: 19.7rem;
     }
 }
