--- a/styles/style_about-me.css
+++ b/styles/style_about-me.css
@@ -287,6 +287,10 @@ footer .contacts {
     background-color: var(--background);
 }
 
+footer .contacts h2 {
+    background-color: var(--background);
+}
+
 @media (max-width: 768px) {
     
     .navbar {
