--- a/styles/style_ecvcproto.css
+++ b/styles/style_ecvcproto.css
@@ -1,4 +1,5 @@
 @import url('https://fonts.googleapis.com/css2?family=Catamaran:wght@100..900&family=M+PLUS+2:wght@100..900&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Catamaran:wght@100..900&family=M+PLUS+2:wght@100..900&display=swap');
 
 :root {
     --background: #18111B;      /* 1 */
@@ -263,6 +264,10 @@ footer .contacts {
     flex-direction: row;
     gap: 1rem;
     align-items: flex-end;
+    background-color: var(--background);
+}
+
+footer .contacts h2 {
     background-color: var(--background);
 }
 
