--- a/styles/style_geomod.css
+++ b/styles/style_geomod.css
@@ -266,6 +266,10 @@ footer .contacts {
     background-color: var(--background);
 }
 
+footer .contacts h2 {
+    background-color: var(--background);
+}
+
 @media (max-width: 768px) {
     
     .navbar {
